🎉auto update by Gmeek action

--- a/backup/数据库使用手册-基本版.md
+++ b/backup/数据库使用手册-基本版.md
@@ -3,25 +3,52 @@
 ```
 mkdir -p /opt/postgres
 ./configure --prefix=/opt/postgres && make -j 8 && make install
+```
+添加用户
+```
 useradd -m postgres; passwd postgres;
 mkdir /opt/postgres/data
 chown -R postgres /opt/postgres
+su postgres
+
+
 # vim ~/.bashrc
 PATH=$PATH:/opt/postgres/bin
 export PATH
 LD_LIBRARY_PATH=/opt/postgres/lib
 export LD_LIBRARY_PATH
 export PGDATA=/opt/postgres/data
+
 source ~/.bashrc
 postgres --version
 ```
+### 启动数据库
+```
+initdb -D $PGDATA
+pg_ctl -D $PGDATA -l ~/logs/pg_0611.log start
+psql -p 5432 
+```
+### 修改配置
+```
+vi postgresql.conf
+listen_addresses = '*'
+#port = 5432
+#unix_socket_directories = '/tmp'
+#改完postgresql.conf后需要重启数据库
+pg_ctl -D $PGDATA -l ~/logs/pg_0611 restart
+vi pg_hba.conf
+#最后一行添加，允许远程密码连接，若不需要密码最后一个参数改为trust
+host        all        all        0.0.0.0/0        md5
+# 若端口号有冲突使用netstat -anp | grep 5432
+# pg_ctl reload重新读取pg_hba.conf文件
+```
 
-### 创建数据库用户
+### 创建、迁移数据库用户
 ```sql
-postgres=# create user pg with password 'password';
+postgres=# create user your_name with password 'password';
 CREATE ROLE
--- alter pg name rename to new pgnew;
--- alter pg name with password 'newpassword'; 
+-- ALTER your_name name with password 'newpassword'; 
+-- ALTER TABLE your_table_name OWNER TO new_username;
 ```
 ## HighgoDB
 
