🎉auto update by Gmeek action

--- a/backup/数据库使用手册-基本版.md
+++ b/backup/数据库使用手册-基本版.md
@@ -52,4 +52,14 @@ CREATE ROLE
 ```
 ## HighgoDB
 
+### 启动数据库
+```shell
+initdb -D $PGDATA
+hg_sslkeygen.sh  -D $PGDATA
+pg_ctl -D $PGDATA -l ~/logs/hg_0611 restart
+psql -U sysdba -d highgo
+``` 
+
 ## IvorySQL
+
+<!-- ##{"script":"<script src='https://blog.meekdai.com/Gmeek/plugins/GmeekTOC.js'></script>"}## -->
