🎉auto update by Gmeek action

--- a/backup/COMP9315冒险记.md
+++ b/backup/COMP9315冒险记.md
@@ -4,7 +4,23 @@
 [课程笔记](https://vwong.dev/notes/COMP9315/)
 [离线课程材料](https://github.com/weil0819/COMP9315)
 
+# 课程进度
+p2 10:39
 
+# 课程笔记
+![Image](https://github.com/user-attachments/assets/0aac4ede-62de-4b67-ae17-6672f4089ff2)
+添加表这个DDL操作，只会在数据库中的目录(Catalog)中新增一个条目，并返回一个状态如：
+```psql
+jas=# create table RR ( x integer, y integer);
+CREATE TABLE
+
+jas=# \d rr
+    Table "Public.rr"
+Column | Type   | Modifiers
+-------+---------+-----------
+x      | integer |
+y      | integer |      
+``` 
 
 
 
