🎉auto update by Gmeek action

--- a/backup/COMP9315冒险记.md
+++ b/backup/COMP9315冒险记.md
@@ -5,7 +5,7 @@
 [离线课程材料](https://github.com/weil0819/COMP9315)
 
 # 课程进度
-p2 10:39
+p3 0：0
 
 # 课程笔记
 ![Image](https://github.com/user-attachments/assets/0aac4ede-62de-4b67-ae17-6672f4089ff2)
@@ -22,8 +22,22 @@ x      | integer |
 y      | integer |      
 ``` 
 
+关系代数语言可以用数学的角度来理解，也可以作为操作数据的汇编语言来理解。
+每一条SQL查询语句，都可以翻译为关系代数语言，查询优化器可能有不同的翻译优化，如：
+Sel[course=COMP9315 & mark >=50 & term=18s2](Course join Enrollment join Student)
 
+1. 先join再select
+Tmp1 = Course join Enrollment
+Tmp2 = Tmp1 join Student
+Res = Sel[course=COMP9315 & mark>=50 & term=18s2] Tmp2
 
+2. 先select再join
+Tmp1 = Sel[course=COM9315 & term=18s2] Course
+Tmp2 = Sel[mark >= 50] Enrollment
+Tmp3 = Tmp1 join Tmp2
+Tmp4 = Tmp3 join Student --获取学生的姓名
+
+![Image](https://github.com/user-attachments/assets/b3c0d3da-635d-4533-91a6-7cf0f20ac5e7)
 
 
 
