🎉auto update by Gmeek action

--- a/backup/数据库使用手册-基本版.md
+++ b/backup/数据库使用手册-基本版.md
@@ -1,42 +1,44 @@
 ## Postgres
 下载Postgres[源码](http://www.postgresql.org/ftp/source/)
 ```
-mkdir -p /opt/postgres
-./configure --prefix=/opt/postgres && make -j 8 && make install
+tar xfj *.bz2 # tar -zxvf *.gz
+# useradd -m postgres; passwd postgres;
+sudo mkdir -p /opt/pgsql
+sudo chown -R $USER /opt/pgsql
+./configure --prefix=/opt/pgsql && make -j 8 && make install
 ```
-添加用户
+
+添加环境变量文件/opt/pgsql/env
 ```
-useradd -m postgres; passwd postgres;
-mkdir /opt/postgres/data
-chown -R postgres /opt/postgres
-su postgres
+export PGDATA=/opt/pgsql/data
+export PGHOST=$PGDATA
+export LD_LIBRARY_PATH=/opt/pgsql/lib
 
+export PATH=/opt/pgsql/bin:$PATH
 
-# vim ~/.bashrc
-PATH=$PATH:/opt/postgres/bin
-export PATH
-LD_LIBRARY_PATH=/opt/postgres/lib
-export LD_LIBRARY_PATH
-export PGDATA=/opt/postgres/data
-
-source ~/.bashrc
-postgres --version
+alias p0="pg_ctl stop"
+alias p1="pg_ctl -l $PGDATA/log start"
+alias pl="psql -l"
+alias showpg="tail -20 $PGDATA/log"
 ```
+
+修改配置文件
+```
+edit $PGDATA/postgresql.conf
+... set listen_addresses = '' ...
+... set max_connections = 10 ...
+... set max_wal_senders = 4 ...
+... set unix_socket_directories = 'name of PGDATA directory' ...
+```
+
 ### 启动数据库
 ```
-initdb -D $PGDATA
-pg_ctl -D $PGDATA -l ~/logs/pg_0611.log start
+initdb -D $PGDATA # initdb
+pg_ctl -D $PGDATA -l $PGDATA/log start # p1
 psql -p 5432 
 ```
-### 修改配置
+### 修改pg_hba.conf配置
 ```
-vi postgresql.conf
-listen_addresses = '*'
-#port = 5432
-#unix_socket_directories = '/tmp'
-#改完postgresql.conf后需要重启数据库
-pg_ctl -D $PGDATA -l ~/logs/pg_0611 restart
-vi pg_hba.conf
 #最后一行添加，允许远程密码连接，若不需要密码最后一个参数改为trust
 host        all        all        0.0.0.0/0        md5
 # 若端口号有冲突使用netstat -anp | grep 5432
