🎉auto update by Gmeek action

--- a/backup/数据库使用手册-基本版.md
+++ b/backup/数据库使用手册-基本版.md
@@ -24,6 +24,36 @@ alias p1="pg_ctl -l $PGDATA/log start"
 alias pl="psql -l"
 alias showpg="tail -20 $PGDATA/log"
 ```
+多数据库切换shell函数
+```shell
+function switchdb() {
+    if [ -z "$1" ]; then
+        echo "用法: switchdb [ivorysql|pg|highgo]"
+        echo "例如: switchdb pg"
+        return 1
+    fi
+
+    case "$1" in
+        ivorysql)
+            source /opt/db/ivorysql/env
+            echo "✅ 已切换到 IvorySQL 环境。"
+            ;;
+        pg)
+            source /opt/db/pgsql/env
+            echo "✅ 已切换到 PostgreSQL 环境。"
+            ;;
+        highgo)
+            source /opt/db/highgosql/env
+            echo "✅ 已切换到 HighGo 环境。"
+            ;;
+        *)
+            echo "❌ 错误: 无效的参数 '$1'"
+            echo "用法: switchdb [ivorysql|pg|highgo]"
+            return 1
+            ;;
+    esac
+}
+``` 
 
 修改配置文件
 ```
