--- a/backup/数据库使用手册-基本版.md
+++ b/backup/数据库使用手册-基本版.md
@@ -55,14 +55,6 @@ function switchdb() {
 }
 ``` 
 
-修改配置文件
-```
-edit $PGDATA/postgresql.conf
-... set listen_addresses = '' ...
-... set max_connections = 10 ...
-... set max_wal_senders = 4 ...
-... set unix_socket_directories = 'name of PGDATA directory' ...
-```
 
 ### 启动数据库
 ```
@@ -70,12 +62,23 @@ initdb -D $PGDATA # initdb
 pg_ctl -D $PGDATA -l $PGDATA/log start # p1
 psql -p 5432 
 ```
+
 ### 修改pg_hba.conf配置
 ```
 #最后一行添加，允许远程密码连接，若不需要密码最后一个参数改为trust
 host        all        all        0.0.0.0/0        md5
 # 若端口号有冲突使用netstat -anp | grep 5432
 # pg_ctl reload重新读取pg_hba.conf文件
+```
+
+修改配置文件
+```
+edit $PGDATA/postgresql.conf
+... set listen_addresses = '' ...
+... set max_connections = 10 ...
+... set max_wal_senders = 4 ...
+... set unix_socket_directories = 'name of PGDATA directory' ...
+p0 p1 # 重启数据库
 ```
 
 ### 创建、迁移数据库用户
