🎉auto update by Gmeek action

--- a/backup/数据库使用手册-基本版.md
+++ b/backup/数据库使用手册-基本版.md
@@ -100,3 +100,5 @@ psql -U sysdba -d highgo
 
 ## IvorySQL
 [Github Release](https://github.com/IvorySQL/IvorySQL/releases)下载安装包
+
+yum install bison flex;
