🎉auto update by Gmeek action

--- a/backup/数据库使用手册-基本版.md
+++ b/backup/数据库使用手册-基本版.md
@@ -96,6 +96,13 @@ initdb -D $PGDATA
 hg_sslkeygen.sh  -D $PGDATA
 pg_ctl -D $PGDATA -l ~/logs/hg_0611 restart
 psql -U sysdba -d highgo
+
+
+select set_secure_param('hg_sepofpowers','off');
+
+show password_encryption;
+alter system set password_encryption to md5;
+select pg_reload_conf();
 ``` 
 
 ## IvorySQL
