🎉auto update by Gmeek action

--- a/backup/COMP9315冒险记.md
+++ b/backup/COMP9315冒险记.md
@@ -6,7 +6,7 @@
 
 
 # 课程进度
-p4 12：01
+p5 0：00 Week2
 
 # 课程笔记
 ![Image](https://github.com/user-attachments/assets/0aac4ede-62de-4b67-ae17-6672f4089ff2)
@@ -44,3 +44,6 @@ Catalog 系统表
 \dS所有系统表
 ![Image](https://github.com/user-attachments/assets/f030a734-bc7e-4782-ac94-d57329c4201f)
 
+可以利用系统目录中的各种表做很多组合的元类型查询。
+
+![Image](https://github.com/user-attachments/assets/8fa92b8b-bf06-4508-b1e1-6c26cb0c759c)
