--- a/backup/数据库使用手册-基本版.md
+++ b/backup/数据库使用手册-基本版.md
@@ -109,3 +109,5 @@ select pg_reload_conf();
 [Github Release](https://github.com/IvorySQL/IvorySQL/releases)下载安装包
 
 yum install bison flex;
+
+sudo apt install libicu-dev  pkg-config;
