--- a/backup/数据库使用手册-基本版.md
+++ b/backup/数据库使用手册-基本版.md
@@ -108,6 +108,5 @@ select pg_reload_conf();
 ## IvorySQL
 [Github Release](https://github.com/IvorySQL/IvorySQL/releases)下载安装包
 
-yum install bison flex;
-
-sudo apt install libicu-dev  pkg-config;
+sudo apt install bison flex  libicu-dev  pkg-config libreadline-dev  zlib1g-dev ;
+# Optional  uuid-dev
