🎉auto update by Gmeek action

--- a/backup/数据库使用手册-基本版.md
+++ b/backup/数据库使用手册-基本版.md
@@ -108,5 +108,6 @@ select pg_reload_conf();
 ## IvorySQL
 [Github Release](https://github.com/IvorySQL/IvorySQL/releases)下载安装包
 
-sudo apt install bison flex  libicu-dev  pkg-config libreadline-dev  zlib1g-dev ;
+sudo apt install bison flex  libicu-dev  pkg-config libreadline-dev  zlib1g-dev libxml2-dev ;
 # Optional  uuid-dev
+# ./configure --with-libxml
