🎉auto update by Gmeek action

--- a/backup/配置文件管理手册.md
+++ b/backup/配置文件管理手册.md
@@ -7,6 +7,9 @@ ssh-copy-id -i ~/.ssh/id_rsa.pub user@server
 ## tool
 https://www.hejki.org/ssheditor/
 
+# zsh
+https://www.haoyep.com/posts/zsh-config-oh-my-zsh/
+
 # tmux
 vim ~/.tmux.conf
 tmux source-file ~/.tmux.conf
